[gd_scene load_steps=2 format=3 uid="uid://btvutxvxafcwg"]

[ext_resource type="Script" path="res://scenes/last.gd" id="1_vvkc4"]

[node name="Last" type="Node2D"]
script = ExtResource("1_vvkc4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 648.0
color = Color(2.31028e-06, 0.637437, 0.906908, 1)

[node name="Total_score" type="Label" parent="."]
offset_left = 368.0
offset_top = 213.0
offset_right = 787.0
offset_bottom = 263.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Total Score: "

[node name="Total_time" type="Label" parent="."]
offset_left = 372.0
offset_top = 296.0
offset_right = 735.0
offset_bottom = 346.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Total Time: 
"

[node name="ThankYou" type="Label" parent="."]
offset_left = 166.0
offset_top = 51.0
offset_right = 935.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Thank You 
"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 330.0
offset_top = 503.0
offset_right = 819.0
offset_bottom = 543.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 12.0
offset_top = -68.0
offset_right = 491.0
offset_bottom = 12.0
theme_override_colors/icon_pressed_color = Color(0.355314, 0.355314, 0.355314, 1)
theme_override_font_sizes/font_size = 32
text = "Play again"

[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
